more mandrill cleanup